--- a/bicemodded/localisation/english/TW_events_l_english.yml
+++ b/bicemodded/localisation/english/TW_events_l_english.yml
@@ -4031,6 +4031,9 @@
  news.3142.t:0 "France pressures the Benelux"
  news.3142.d:0 "TO DO"
  news.3142.a:0 "TO DO"
+ worldnews.32.t:0 "Operation Torch"
+ worldnews.32.d:0 "Today, November 8th 1942, Allied forces land in Morocco!  In a combined operation by American, British, and Commonwealth forces 107,000 troops have hit the sandy beaches of North Africa in a surprise move against French Axis-Collaborators being commanded from Vichy.  Many of the former collaborators have already defected to join the forces of Free France, seeing a turn of the tide as the troop transports wash ashore.  With this move, the world watches to see if the tide is turning against the German Reich and its allies, and wonders what surprising moves might be next by Joint Allied Command."
+ worldnews.32.a:0 "A new front has opened!"
  
  news.3144.t:0 "Germany declares war on the Soviet Union!"
  news.3144.d:0 "Germany has launched a surprise offensive into the USSR. Operation Barbarossa (German: Unternehmen Barbarossa) was the code name for Germany's invasion of the Soviet Union during World War II, which was launched on Sunday 22 June 1941. In the two years leading up to the invasion, the two countries signed political and economic pacts for strategic purposes. Nevertheless, the German High Command began planning an invasion of the Soviet Union in July 1940 (under the codename Operation Otto), which Adolf Hitler authorized on 18 December 1940."
